# mingze-gao

./: .gitignore  .nojekyll  404.html  Ads.txt  CLAUDE.html  CNAME  Dockerfile  README.md  _brand.yml  _quarto.yml  build.sh  docker-compose.yml  index.html  index.qmd  legao-brick.html  legao-test.html  legao.html  listings.json  mkdocs.yml  posts.qmd  pyproject.toml  references.bib  requirements.txt  research.md  robots.txt  search.json  sitemap.xml  sogousiteverification.txt  styles.css  styles.scss  test.html
about/: index.html
apps/: index.html
conf/: default.conf  nginx.conf
curriculum-vitae/: index.html
cv/: index.html  index.qmd
data/: index.html
docs/: about.md  apps.md  cv.md  index.md  projects.md  research.md  tags.md  timetable.md
finc50/: index.html
javascripts/: mathjax.js
legao/: index.html  index.qmd
mktstructure/: index.html
option-pricing-explained/: asset-manifest.json  service-worker.js
overrides/: home.html  main.html  sidebar.html
posts/: 100-bitcoins-forgone-for-science.html  100-bitcoins-forgone-for-science.md  _metadata.yml  bitcoin-address-generator-in-obfuscated-python.md  convert-between-numeric-and-character-variables.md  difference-in-differences.md  garch-ccc.md  generate-fama-french-industry-classification-from-sic.md  index.html  index.qmd  merge-compustat-and-crsp.md  merton-dd.md  reconciliation-of-black-scholes-variants.md  specification-curve-analysis.md  translog-cost-function-estimation.md  what-it-takes-to-be-a-ceo.md
remv/: asset-manifest.json  index.html
research/: index.html  index.md  index.qmd
(+780 files in other folders)
